# idea-chooser

./: .gitignore  Cargo.toml
src/: main.rs
