[package]
edition = "2018"
name = "idea-chooser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
clap = "3.0.0-beta.4"
polars = "0.16.0"
# yew = {version = "0.18.0", package = "web-sys"}
# eframe = {git = "https://github.com/emilk/egui", branch = "master"}
# serde = {version = "1", features = ["derive"], optional = true}
